--- a/english-language/paper-one/index.html
+++ b/english-language/paper-one/index.html
@@ -457,13 +457,17 @@
           <div class="topic">
             <span>Full Past Paper 1</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Language Paper 1 Summary</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -473,7 +477,9 @@
           <div class="topic">
             <span>Write down structure for each question</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -483,25 +489,33 @@
           <div class="topic">
             <span>How To Make Notes For Language Papers</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Language Technique Sheet</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Structure Techniques</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>How To Plan Language Questions</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -511,7 +525,9 @@
           <div class="topic">
             <span>Question 1</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -521,7 +537,9 @@
           <div class="topic">
             <span>Question 2</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -531,7 +549,9 @@
           <div class="topic">
             <span>Question 3</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -541,7 +561,9 @@
           <div class="topic">
             <span>Question 4</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -551,25 +573,33 @@
           <div class="topic">
             <span>Creative Writing Vocab</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Question 5 - Creative Writing</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Question 5 (Creative Writing) Past Paper Question</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>How to adapt any piece of creative writing</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -579,19 +609,25 @@
           <div class="topic">
             <span>Insert</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Questions</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Mark Scheme</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -601,19 +637,25 @@
           <div class="topic">
             <span>Insert</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Questions</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Mark Scheme</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -623,19 +665,25 @@
           <div class="topic">
             <span>Insert</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Questions</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Mark Scheme</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -645,19 +693,25 @@
           <div class="topic">
             <span>2020 Past Paper Answered</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Hot Description</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Cold Description</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
