--- a/english-language/paper-two/index.html
+++ b/english-language/paper-two/index.html
@@ -457,7 +457,9 @@
         <div class="panel">
           <div class="topic">
             <span>Question 5 (Persuasive Writing) Past Paper Question</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
@@ -465,19 +467,27 @@
         <div class="panel">
           <div class="topic">
             <span>Write down structure for each question</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>Full Past Paper 1</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>Full Past Paper 2</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>Language Paper 2 Summary</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
@@ -485,19 +495,27 @@
         <div class="panel">
           <div class="topic">
             <span>How To Make Notes For Language Papers</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>Language Technique Sheet</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>Structure Techniques</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>How To Plan Language Papers</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
@@ -505,7 +523,9 @@
         <div class="panel">
           <div class="topic">
             <span>Question 1</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
@@ -513,7 +533,9 @@
         <div class="panel">
           <div class="topic">
             <span>Question 2</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
@@ -521,7 +543,9 @@
         <div class="panel">
           <div class="topic">
             <span>Question 3</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
@@ -529,7 +553,9 @@
         <div class="panel">
           <div class="topic">
             <span>Question 4</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
@@ -537,11 +563,15 @@
         <div class="panel">
           <div class="topic">
             <span>Question 5 - Persuasive Writing</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>SWEEP</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
@@ -549,15 +579,21 @@
         <div class="panel">
           <div class="topic">
             <span>Insert</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>Questions</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>Mark Scheme</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
@@ -565,15 +601,21 @@
         <div class="panel">
           <div class="topic">
             <span>Insert</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>Questions</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>Mark Scheme</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
@@ -581,15 +623,21 @@
         <div class="panel">
           <div class="topic">
             <span>Insert</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>Questions</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>Mark Scheme</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
@@ -597,11 +645,15 @@
         <div class="panel">
           <div class="topic">
             <span>2021 Past Paper Answered</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>Fast Fashion Article</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
