--- a/english-literature/gcse-texts/a-christmas-carol/index.html
+++ b/english-literature/gcse-texts/a-christmas-carol/index.html
@@ -456,7 +456,9 @@
           <div class="topic">
             <span>Learn</span>
             <a href="learn-folders/learn-aic/learn.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
         </div>
@@ -468,25 +470,33 @@
             <a
               href="learn-folders/notes/how_to_make_notes_for_an_inspector_calls.html"
             >
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
           <div class="topic">
             <span>Summary</span>
             <a href="learn-folders/notes/summary.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
           <div class="topic">
             <span>Context</span>
             <a href="learn-folders/notes/context.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
           <div class="topic">
             <span>Grade 9 Key Words</span>
             <a href="learn-folders/notes/grade_9_key_words.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
         </div>
@@ -496,25 +506,33 @@
           <div class="topic">
             <span>Scrooge Key Themes</span>
             <a href="learn-folders/key-themes/mr_birling.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
           <div class="topic">
             <span>The Ghosts Key Themes</span>
             <a href="learn-folders/key-themes/mrs_birling.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
           <div class="topic">
             <span>Bob Cratchit/Cratchits Key Themes</span>
             <a href="learn-folders/key-themes/sheila.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
           <div class="topic">
             <span>Fred Key Themes</span>
             <a href="learn-folders/key-themes/eric.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
         </div>
@@ -524,43 +542,57 @@
           <div class="topic">
             <span>Scrooge Stave 1</span>
             <a href="learn-folders/mr-birling/mr_birling_act_1.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
           <div class="topic">
             <span>Scrooge Stave 2</span>
             <a href="learn-folders/mr-birling/mr_birling_act_2.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
           <div class="topic">
             <span>Scrooge Stave 3</span>
             <a href="learn-folders/mr-birling/mr_birling_act_3.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
           <div class="topic">
             <span>Scrooge Stave 4</span>
             <a href="learn-folders/mr-birling/mr_birling_act_3.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
           <div class="topic">
             <span>Scrooge Stave 5</span>
             <a href="learn-folders/mr-birling/mr_birling_act_3.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
           <div class="topic">
             <span>Summarised Notes</span>
             <a href="learn-folders/mr-birling/summarised_notes.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
           <div class="topic">
             <span>Scrooge Theme Table</span>
             <a href="learn-folders/mr-birling/mr_birling_theme_table.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
         </div>
@@ -570,49 +602,65 @@
           <div class="topic">
             <span>The Ghost of Christmas Past</span>
             <a href="learn-folders/mrs-birling/mrs_birling_act_1.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
           <div class="topic">
             <span>The Ghost of Christmas Past Theme Table</span>
             <a href="learn-folders/mrs-birling/mrs_birling_act_2.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
           <div class="topic">
             <span>Marley</span>
             <a href="learn-folders/mrs-birling/mrs_birling_act_3.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
           <div class="topic">
             <span>Marley Theme Table</span>
             <a href="learn-folders/mrs-birling/summarised_notes.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
           <div class="topic">
             <span>The Ghost of Christmas Present</span>
             <a href="learn-folders/mrs-birling/mrs_birling_theme_table.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
           <div class="topic">
             <span>The Ghost of Christmas Present Theme Table</Table></span>
             <a href="learn-folders/mrs-birling/mrs_birling_theme_table.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
           <div class="topic">
             <span>The Ghost of Christmas Yet to Come</span>
             <a href="learn-folders/mrs-birling/mrs_birling_theme_table.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
           <div class="topic">
             <span>The Ghost of Christmas Yet to Come Theme Table</span>
             <a href="learn-folders/mrs-birling/mrs_birling_theme_table.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
         </div>
@@ -622,13 +670,17 @@
           <div class="topic">
             <span>Bob Cratchit</span>
             <a href="learn-folders/sheila/sheila_act_1.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
           <div class="topic">
             <span>Bob Cratchit Theme Table</span>
             <a href="learn-folders/sheila/sheila_act_2.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
            </div>
          </div>
@@ -638,13 +690,17 @@
           <div class="topic">
             <span>Fred</span>
             <a href="learn-folders/eric/eric_act_1.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
           <div class="topic">
             <span>Fred Theme Table</span>
             <a href="learn-folders/eric/eric_act_2.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
         </div>
@@ -655,7 +711,9 @@
             <span>AQA Style Practice Questions</span>
             <a
               href="learn-folders/practice-questions/aqa_style_practice_questions.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
         </div>
@@ -665,20 +723,26 @@
           <div class="topic">
             <span>Transformation essay plan</span>
             <a href="learn-folders/essay-plans/guilt_essay_plan.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
           <div class="topic">
             <span>Kindness and family essay plan</span>
             <a
               href="learn-folders/essay-plans/social_responsibility_essay_plan.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
           <div class="topic">
             <span>Supernatural essay plan</span>
             <a href="learn-folders/essay-plans/mrs_birling_essay_plan.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
         </div>
@@ -689,7 +753,9 @@
             <span>AQA Past Paper Questions</span>
             <a
               href="learn-folders/past-paper-questions/aqa_past_paper_questions.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
         </div>
@@ -700,7 +766,9 @@
             <span>'Joy and happiness in A Christmas Carol'</span>
             <a
               href="learn-folders/grade-9-essays/how_does_priestley_present_society_as_unfair.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
           <div class="topic">
@@ -708,7 +776,9 @@
               >'Ghosts help Scrooge to change his behaviour and attitude'</span>
             <a
               href="learn-folders/grade-9-essays/how_far_does_priestley_present_male_characters_as_irresponsible.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
           <div class="topic">
@@ -716,7 +786,9 @@
               >'How Dickens creates atmosphere in the novella'</span>
             <a
               href="learn-folders/grade-9-essays/how_does_priestley_use_mr_birling_to_present_his_concerns_in_society.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
           <div class="topic">
@@ -724,7 +796,9 @@
               >'Explore how redemption is presented'</span>
             <a
               href="learn-folders/grade-9-essays/how_does_priestley_use_mrs_birling_to_explore_ideas_about_social_class.html">
+                          <a href="learn-folders/">
               <button class="start-learning">Start Learning</button>
+            </a>
             </a>
           </div>
         </div>
