--- a/english-literature/poems/love-and-relationships/index.html
+++ b/english-literature/poems/love-and-relationships/index.html
@@ -458,31 +458,41 @@
           <div class="topic">
             <span>Plan Past paper question 1</span>
             <a href="learn-folders/learn-aic/learn.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Plan Past paper question 2</span>
             <a href="learn-folders/learn-aic/learn.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Write up full essay 1</span>
             <a href="learn-folders/learn-aic/learn.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Write up full essay 2</span>
             <a href="learn-folders/learn-aic/learn.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Learn</span>
             <a href="learn-folders/learn-aic/learn.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -494,13 +504,17 @@
             <a
               href="learn-folders/notes/how_to_make_notes_for_an_inspector_calls.html"
             >
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Poetic Techniques</span>
             <a href="learn-folders/notes/summary.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -510,19 +524,25 @@
           <div class="topic">
             <span>Key Themes pt.1</span>
             <a href="learn-folders/key-themes/mr_birling.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Key Themes pt.2</span>
             <a href="learn-folders/key-themes/mrs_birling.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Key Themes pt.3</span>
             <a href="learn-folders/key-themes/sheila.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -532,7 +552,9 @@
           <div class="topic">
             <span>Fate essay plan</span>
             <a href="learn-folders/essay-plans/guilt_essay_plan.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
@@ -540,13 +562,17 @@
             <a
               href="learn-folders/essay-plans/social_responsibility_essay_plan.html"
             >
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Individual vs society essay plan</span>
             <a href="learn-folders/essay-plans/mrs_birling_essay_plan.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -556,7 +582,9 @@
           <div class="topic">
             <span>When We Two Parted</span>
             <a href="learn-folders/mr-birling/mr_birling_act_1.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -566,7 +594,9 @@
           <div class="topic">
             <span>Neutral Tones</span>
             <a href="learn-folders/mrs-birling/mrs_birling_act_1.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -576,7 +606,9 @@
           <div class="topic">
             <span>Winter Swans</span>
             <a href="learn-folders/sheila/sheila_act_1.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -586,7 +618,9 @@
           <div class="topic">
             <span>Singh Song</span>
             <a href="learn-folders/eric/eric_act_1.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -596,7 +630,9 @@
           <div class="topic">
             <span>Loves Philosophy</span>
             <a href="learn-folders/gerald/gerald_act_1.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -606,7 +642,9 @@
           <div class="topic">
             <span>The Farmer's Bride</span>
             <a href="learn-folders/the-inspector/the_inspector_act_1.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -616,7 +654,9 @@
           <div class="topic">
             <span>Porphyria's Lover</span>
             <a href="learn-folders/the-inspector/the_inspector_act_1.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -628,7 +668,9 @@
             <a
               href="learn-folders/practice-questions/aqa_style_practice_questions.html"
             >
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -638,7 +680,9 @@
           <div class="topic">
             <span>>Walking Away</span>
             <a href="learn-folders/the-inspector/the_inspector_act_1.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -648,7 +692,9 @@
           <div class="topic">
             <span>>Follower</span>
             <a href="learn-folders/the-inspector/the_inspector_act_1.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -658,7 +704,9 @@
           <div class="topic">
             <span>>Follower</span>
             <a href="learn-folders/the-inspector/the_inspector_act_1.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -668,7 +716,9 @@
           <div class="topic">
             <span>>Climbing My Grandfather</span>
             <a href="learn-folders/the-inspector/the_inspector_act_1.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -678,7 +728,9 @@
           <div class="topic">
             <span>>Eden Rock</span>
             <a href="learn-folders/the-inspector/the_inspector_act_1.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -688,7 +740,9 @@
           <div class="topic">
             <span>>Before You Were Mine</span>
             <a href="learn-folders/the-inspector/the_inspector_act_1.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -698,7 +752,9 @@
           <div class="topic">
             <span>>Letters From Yorkshire</span>
             <a href="learn-folders/the-inspector/the_inspector_act_1.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -710,7 +766,9 @@
             <a
               href="learn-folders/past-paper-questions/aqa_past_paper_questions.html"
             >
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -724,7 +782,9 @@
             <a
               href="learn-folders/grade-9-essays/how_does_priestley_present_society_as_unfair.html"
             >
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
@@ -735,7 +795,9 @@
             <a
               href="learn-folders/grade-9-essays/how_far_does_priestley_present_male_characters_as_irresponsible.html"
             >
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
