--- a/english-literature/poems/unseen-poetry/index.html
+++ b/english-literature/poems/unseen-poetry/index.html
@@ -456,25 +456,33 @@
           <div class="topic">
             <span>Plan Past paper question 1</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Plan Past paper question 2</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Write up full essay 1</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Write up full essay 2</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -484,19 +492,25 @@
           <div class="topic">
             <span>Poetic Techniques</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Language Techniques Sheet</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Structure Techniques</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -506,7 +520,9 @@
           <div class="topic">
             <span>24 Mark Overview</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -516,7 +532,9 @@
           <div class="topic">
             <span>8 Mark Overview</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -526,7 +544,9 @@
           <div class="topic">
             <span>AQA Past Paper Questions</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -536,7 +556,9 @@
           <div class="topic">
             <span>'How the poet present the speakers feelings about love'</span>
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
@@ -545,7 +567,9 @@
               night'</span
             >
             <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
