--- a/english-literature/top-tips/index.html
+++ b/english-literature/top-tips/index.html
@@ -457,7 +457,9 @@
         <div class="panel">
           <div class="topic">
             <span>Examiner Hacks for An Inspector Calls</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
@@ -465,7 +467,9 @@
         <div class="panel">
           <div class="topic">
             <span>Exclusive Examiner Comparison Tips</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
@@ -473,11 +477,15 @@
         <div class="panel">
           <div class="topic">
             <span>24 Mark Question Top Tips</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>8 Mark Question Hacks</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
@@ -485,7 +493,9 @@
         <div class="panel">
           <div class="topic">
             <span>Answering Your Questions</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
