--- a/essay-skills/index.html
+++ b/essay-skills/index.html
@@ -453,7 +453,9 @@
         <div class="panel">
           <div class="topic">
             <span>Learn</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
@@ -461,35 +463,51 @@
         <div class="panel">
           <div class="topic">
             <span>How to Analyse</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>Analytical Paragraph Structure</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>P (Point)</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>ET (Evidence Technique)</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>A (Analysis)</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>ETA 2 (Evidence, Technique, Analysis)</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>C (Contxet)</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>WL (Writers Intentions + Link)</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
@@ -497,11 +515,15 @@
         <div class="panel">
           <div class="topic">
             <span>Language Technique Sheet</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>Structure Techniques</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
@@ -509,7 +531,9 @@
         <div class="panel">
           <div class="topic">
             <span>Conclusion</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
@@ -517,19 +541,27 @@
         <div class="panel">
           <div class="topic">
             <span>How to get the most out of reading grade 9 essays</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>How to effectively plan any Literature essays</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>How to properly write up Literature essays</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>How to plan Language questions</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
