--- a/revision/index.html
+++ b/revision/index.html
@@ -453,7 +453,9 @@
         <div class="panel">
           <div class="topic">
             <span>Learn</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
@@ -461,19 +463,27 @@
         <div class="panel">
           <div class="topic">
             <span>How To Use This Section</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>How To Make Notes For Poetry</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>How To Make Notes For Shakespears's Plays</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>How To Make Notes For Language Papers</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
@@ -481,19 +491,27 @@
         <div class="panel">
           <div class="topic">
             <span>How To Use This Section</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>The Lightup Method</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>Blurting</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>Flash Cards</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
@@ -501,19 +519,27 @@
         <div class="panel">
           <div class="topic">
             <span>Love + Relationship Poetry</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>An Inspector Calls</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>A Christmas Carol</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>Romeo + Juliet</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
