--- a/english-literature/gcse-texts/romeo-and-juliet/index.html
+++ b/english-literature/gcse-texts/romeo-and-juliet/index.html
@@ -457,7 +457,9 @@
           <div class="topic">
             <span>Learn</span>
             <a href="learn-folders/learn-aic/learn.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -469,25 +471,33 @@
             <a
               href="learn-folders/notes/how_to_make_notes_for_an_inspector_calls.html"
             >
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Summary</span>
             <a href="learn-folders/notes/summary.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Context</span>
             <a href="learn-folders/notes/context.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Grade 9 Key Words</span>
             <a href="learn-folders/notes/grade_9_key_words.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -497,37 +507,49 @@
           <div class="topic">
             <span>Romeo Key Themes</span>
             <a href="learn-folders/key-themes/mr_birling.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Juliet Key Themes</span>
             <a href="learn-folders/key-themes/mrs_birling.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Lord Capulet Key Themes</span>
             <a href="learn-folders/key-themes/sheila.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Lady Capulet Key Themes</span>
             <a href="learn-folders/key-themes/eric.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>The Friar Key Themes</span>
             <a href="learn-folders/key-themes/gerald.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Tybalt Key Themes</span>
             <a href="learn-folders/key-themes/inspector.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -537,37 +559,49 @@
           <div class="topic">
             <span>Romeo Act 1</span>
             <a href="learn-folders/mr-birling/mr_birling_act_1.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Romeo Act 2</span>
             <a href="learn-folders/mr-birling/mr_birling_act_2.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Romeo Act 3</span>
             <a href="learn-folders/mr-birling/mr_birling_act_3.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Romeo Act 4</span>
             <a href="learn-folders/mr-birling/summarised_notes.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Romeo Act 5</span>
             <a href="learn-folders/mr-birling/summarised_notes.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Romeo Theme Table</span>
             <a href="learn-folders/mr-birling/mr_birling_theme_table.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -577,37 +611,49 @@
           <div class="topic">
             <span>Juliet Act 1</span>
             <a href="learn-folders/mrs-birling/mrs_birling_act_1.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Juliet Act 2</span>
             <a href="learn-folders/mrs-birling/mrs_birling_act_2.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Juliet Act 3</span>
             <a href="learn-folders/mrs-birling/mrs_birling_act_3.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Juliet Act 4</span>
             <a href="learn-folders/mrs-birling/summarised_notes.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Juliet Act 5</span>
             <a href="learn-folders/mrs-birling/summarised_notes.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Juliet Theme Table</span>
             <a href="learn-folders/mrs-birling/mrs_birling_theme_table.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -617,25 +663,33 @@
           <div class="topic">
             <span>Lord Capulet</span>
             <a href="learn-folders/sheila/sheila_act_1.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Lord Capulet Theme Table</span>
             <a href="learn-folders/sheila/sheila_act_2.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Lady Capulet</span>
             <a href="learn-folders/sheila/sheila_act_3.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Lady Capulet Theme Table</span>
             <a href="learn-folders/sheila/summarised_notes.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -645,13 +699,17 @@
           <div class="topic">
             <span>Mercutio</span>
             <a href="learn-folders/eric/eric_act_1.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Mercutio Theme Table</span>
             <a href="learn-folders/eric/eric_act_2.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -661,13 +719,17 @@
           <div class="topic">
             <span>The Friar</span>
             <a href="learn-folders/gerald/gerald_act_1.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>The Friar Theme Table</span>
             <a href="learn-folders/gerald/gerald_act_2.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -677,7 +739,9 @@
           <div class="topic">
             <span>Tybalt</span>
             <a href="learn-folders/the-inspector/the_inspector_act_1.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -687,7 +751,9 @@
           <div class="topic">
             <span>The Nurse</span>
             <a href="learn-folders/the-inspector/the_inspector_act_1.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -699,7 +765,9 @@
             <a
               href="learn-folders/practice-questions/aqa_style_practice_questions.html"
             >
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -709,7 +777,9 @@
           <div class="topic">
             <span>Fate essay plan</span>
             <a href="learn-folders/essay-plans/guilt_essay_plan.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
@@ -717,13 +787,17 @@
             <a
               href="learn-folders/essay-plans/social_responsibility_essay_plan.html"
             >
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
             <span>Individual vs society essay plan</span>
             <a href="learn-folders/essay-plans/mrs_birling_essay_plan.html">
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -735,7 +809,9 @@
             <a
               href="learn-folders/past-paper-questions/aqa_past_paper_questions.html"
             >
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
@@ -747,7 +823,9 @@
             <a
               href="learn-folders/grade-9-essays/how_does_priestley_present_society_as_unfair.html"
             >
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
           <div class="topic">
@@ -755,7 +833,9 @@
             <a
               href="learn-folders/grade-9-essays/how_far_does_priestley_present_male_characters_as_irresponsible.html"
             >
-              <button class="start-learning">Start Learning</button>
+              <a href="learn-folders/">
+                <button class="start-learning">Start Learning</button>
+              </a>
             </a>
           </div>
         </div>
